--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,23 @@ authors = ["Daniel O'Malley <omalled@lanl.gov>"]
 version = "0.1.0"
 
 [deps]
+Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+DifferentiableBackwardEuler = "f6d13b3e-c4dc-4f43-9d3d-672a47390f59"
+NonlinearEquations = "dcda4a48-b9f7-11e9-2d4a-7da573938c24"
+
+[compat]
+DifferentiableBackwardEuler = "^0"
+Calculus = "^0"
+ForwardDiff = "^0"
+NonlinearEquations = "^0"
+StaticArrays = "^0"
+julia = "^1.4"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
