--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 DifferentiableBackwardEuler = "f6d13b3e-c4dc-4f43-9d3d-672a47390f59"
 NonlinearEquations = "dcda4a48-b9f7-11e9-2d4a-7da573938c24"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 DifferentiableBackwardEuler = "^0"
@@ -17,6 +18,7 @@ Calculus = "^0"
 ForwardDiff = "^0"
 NonlinearEquations = "^0"
 StaticArrays = "^0"
+Zygote = "^0.5"
 julia = "^1.4"
 
 [extras]
