--- a/Project.toml
+++ b/Project.toml
@@ -4,19 +4,17 @@ authors = ["Daniel O'Malley <omalled@lanl.gov>"]
 version = "0.1.0"
 
 [deps]
+AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-DifferentiableBackwardEuler = "f6d13b3e-c4dc-4f43-9d3d-672a47390f59"
-NonlinearEquations = "dcda4a48-b9f7-11e9-2d4a-7da573938c24"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-DifferentiableBackwardEuler = "^0"
 Calculus = "^0"
 ForwardDiff = "^0"
-NonlinearEquations = "^0"
 StaticArrays = "^0"
 Zygote = "^0.5"
 julia = "^1.4"
