--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.1.0"
 
 [deps]
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
-Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DifferentiableBackwardEuler = "f6d13b3e-c4dc-4f43-9d3d-672a47390f59"
@@ -19,7 +18,16 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-julia = "^1.4"
+julia = "1.7"
+AlgebraicMultigrid = "0.5"
+ChainRulesCore = "1.14"
+DifferentiableBackwardEuler = "0.1"
+ForwardDiff = "0.10"
+Interpolations = "0.13"
+NLsolve = "4.5"
+NonlinearEquations = "0.1"
+StaticArrays = "1.3"
+Zygote = "0.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
